--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,32 @@
-/*REMEMBER: NO ID'S AND CLASSES AND ONLY USE SELECTORS*/
+ul {
+	display: block;
+}
+ul li:nth-of-type(even) {
+	color: green;
+}
+ul li:nth-of-type(3) {
+	background-color: blue;
+}
+ul li:first-of-type {
+	border-top: 1px solid green;
+}
+ul li:last-of-type {
+	border-bottom: 5px dotted blue;
+}
+ul li {
+	; 
+}
 
+ul > li:nth-of-type(odd) > a {
+  color: red;
+  }
+
+  ul li:first-of-type > a {
+  	color: blue;
+  }
+  ul li:last-of-type > a {
+  	color: blue;
+  }
+  ul li:first-of-type > a:hover {
+  	color: gray;
+  }
