--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ ul li:nth-of-type(even) {
 }
 
 ul li:nth-of-type(3) {
-	background-color: blue;
+	background-color: lightblue;
 }
 
 ul li:first-of-type {
